<resources>
    <string name="saldo">Saldo</string>
    <string name="retirar">Retirar</string>
    <string name="borrar">Borrar</string>
    <string name="enter">Enter</string>
    <string name="bienvenido">Bienvenido !!</string>
    <string name="app_name">ATM</string>
    <string name="texto_boton_iniciar_sesion">Ingresar</string>
    <string name="titulo_iniciar_sesion">Iniciar Sesión</string>
    <string name="bienvenido_a_tu_atm">Bienvenido a tu ATM !!</string>
    <string name="ingrese_cantidad">Ingrese cantidad</string>
    <string name="depositar">Depositar</string>
    <string name="ingrese_su_pin">Ingrese su PIN</string>
    <string name="a">¿Qué cantidad desea depositar?</string>
    <string name="texto_boton_depositar">Depositar\n</string>
    <string name="texto_diguite_cantidad">Diguite la cantidad</string>
    <string name="texto_desea_retirar">¿Qué cantidad desea retirar?</string>
    <string name="texto_boton_retirar">Retirar\n</string>

    <string name="comprobante_titulo">%s Comprobante</string>
    <string name="saldo_anterior">Saldo anterior: $%.2f</string>
    <string name="monto_transaccion">Monto: $%.2f</string>
    <string name="saldo_nuevo">Saldo nuevo: $%.2f</string>
    <string name="btn_realizar_otra_transaccion">Realizar otra transacción</string>
    <string name="comprobante">Comprobante</string>

</resources>