<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtroDepositoActivity"
    android:background="@drawable/fondovacio">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinehOtroDeposito"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16"
        />

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saldo: $0.00"
           android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/guidelinehOtroDeposito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp" />

    <ImageButton
        android:id="@+id/boton_mostrar_pin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Mostrar PIN"
        android:scaleType="fitCenter"
        android:src="@drawable/ojo"
        app:layout_constraintBottom_toTopOf="@id/guidelinehOtroDeposito"
        app:layout_constraintStart_toEndOf="@id/tv_saldo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="15dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_otro_deposito"
        android:layout_width="300dp"
        android:layout_height="580dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelinehOtroDeposito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cantidad_a_depositar_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/a"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDepositoDisplay"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:hint="@string/texto_diguite_cantidad"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/cantidad_a_depositar_titulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="1"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/tvDepositoDisplay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn2"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="2"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/tvDepositoDisplay"
                app:layout_constraintStart_toEndOf="@id/btn1"
                app:layout_constraintEnd_toStartOf="@id/btn3"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="3"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/tvDepositoDisplay"
                app:layout_constraintStart_toEndOf="@id/btn2"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="4"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn5"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="5"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn2"
                app:layout_constraintStart_toEndOf="@id/btn4"
                app:layout_constraintEnd_toStartOf="@id/btn6"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="6"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn3"
                app:layout_constraintStart_toEndOf="@id/btn5"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="7"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn8"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="8"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn5"
                app:layout_constraintStart_toEndOf="@id/btn7"
                app:layout_constraintEnd_toStartOf="@id/btn9"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="9"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn6"
                app:layout_constraintStart_toEndOf="@id/btn8"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="0"
                android:textSize="24sp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/btn7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnBorrar"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:text="Borrar"
                android:textSize="21sp"
                android:textStyle="bold"
                android:backgroundTint="@color/purple2"
                app:layout_constraintTop_toBottomOf="@id/btn8"
                app:layout_constraintStart_toEndOf="@id/btn0"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/boton_realizar_deposito"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/rosado"
                android:text="@string/texto_boton_depositar"
                android:textSize="21sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/btnBorrar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp" />




</androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>